objects/PhasedShipments__c.object
<CustomObject>
    <description>for phasing opportunities</description>
    <fields>
        <fullName>Est_Disc_Sales__c</fullName>
        <label>Est Disc Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>PhasedOpps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <label>PhasedShipment</label>
    <nameField>
        <label>Phased Shipments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PhasedShipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>